[tool.poetry]
name = "esea-accept"
version = "0.1.0"
description = ""
authors = ["William Scullion <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyautogui = "^0.9.47"
numpy = "^1.17"
opencv-python = "^4.1"
nuitka = "^0.6.5"
imutils = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
