[tool.poetry]
name = "esea-accept"
version = "0.1.0"
description = ""
authors = ["William Scullion <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyautogui = "^0.9.47"
numpy = "^1.17"
opencv-python = "^4.1"
nuitka = "^0.6.5"
imutils = "^0.5.3"
mss = "^4.0"
pyinstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"
fbs = "^0.8.4"
PyQt5 = "=5.9.2"
sip = "^4.19"
pypiwin32 = "^223.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
